[package]
name = "pg0"
version = "0.12.3"
edition = "2021"
description = "Zero-dependency CLI to run embedded PostgreSQL locally without installation"
license = "MIT"
repository = "https://github.com/vectorize-io/pg0"

[[bin]]
name = "pg0"
path = "src/main.rs"

[dependencies]
postgresql_embedded = { version = "0.20", default-features = false, features = ["blocking", "theseus", "rustls"] }
postgresql_extensions = { version = "0.20", default-features = false, features = ["blocking", "rustls", "portal-corp", "steampipe", "tensor-chord"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
tar = "0.4"

# ZIP extraction for the Windows PostgreSQL bundle, which theseus-rs ships as
# .zip (unlike every other platform's tar.gz). Only pulled in on Windows
# targets to avoid bloating other platforms' binaries.
[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
