[project]
name = "pg0-embedded"
version = "0.1.1"
description = "Python API for pg0 - embedded PostgreSQL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["postgresql", "database", "embedded", "pgvector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/vectorize-io/pg0"
Repository = "https://github.com/vectorize-io/pg0"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg0"]
