[project]
name = "pg0-embedded"
version = "0.3.0"
description = "Python API for pg0 - embedded PostgreSQL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["postgresql", "database", "embedded", "pgvector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/vectorize-io/pg0"
Repository = "https://github.com/vectorize-io/pg0"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg0"]
# Include the bundled binary in the wheel (artifacts are files that should be
# included even if they're in .gitignore)
artifacts = ["pg0/bin/*"]

# Custom build hook to download the binary before building (wheel only)
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
